Fix button on mobile.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -19,7 +19,7 @@
 
 button {
     float: left;
-    width: 20%;
+    width: 25%;
     padding: 10px;
     background: #2196F3;
     color: white;
@@ -34,7 +34,7 @@ input[type="search"] {
   font-size: 17px;
   border: 1px solid grey;
   float: left;
-  width: 80%;
+  width: 75%;
   background: #f1f1f1;
 }
 
